--- a/css/index.css
+++ b/css/index.css
@@ -3,23 +3,81 @@
         body {
             font-family: 'Courier New', Courier, monospace;
             background-color: #ffffff;
-            /*margin: 0;
-            padding: 2px;*/
+            font-style: italic;
+           
         }
-        h1 {
+        
+        .name{
+            font-family: 'Courier New', Courier, monospace;
+            text-align: center;
+            font-size: 35px;
+            color: #3fabe4;
+            margin-left: 40px;
+        }
+
+        .invite{
+            font-family: 'Courier New', Courier, monospace;
+            text-align: center;
+            margin-top: 40px;
+            font-size: 20px;
+            
+        }
+        .welcome-msj{
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 20px;
+            text-align: center;
+        }
+       
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            background-color: #000000;
+            padding: 2px 0;
+            margin-bottom: 20px;
+            border-radius: 50px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+        }
+
+        .logo_img {
+            height: 100px;
+            margin-right: 90px;
+        }
+
+        .contact{
+            text-decoration: none;
+            font-size: 25px;
+            margin-right: 40px;
             color: #3fabe4;
             
         }
 
-        .container {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #000000;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        .label_menu{
+            text-decoration: none;
+            font-size: 15px;
+           
+            color: #000000;
+            align-items: center;
+        }
 
-            display: flex;
+        .menu-img{
+            height: 180px;
+            background-color: #ffffff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 50px;
             
+    
+        }
+
+        .products{
+           
+            display: flex;
+            justify-content: space-between;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            margin-left: 90px;
+            margin-right: 90px;
         }
    
