--- a/css/index.css
+++ b/css/index.css
@@ -101,10 +101,10 @@
             
         }
 
-        .botonEnviar{
+        .botonGeneral{
 
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             background-color: #000000;
             color: #3fabe4;
             padding: 10px 20px;
@@ -115,7 +115,9 @@
             font-size: 20px;
             width: 100px;
             align-items: center;
-           
-          
+            cursor: pointer;
+            
+            
         }
+
    
