--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@
 
         .logo_img {
             height: 100px;
-            margin-right: 90px;
+            margin-left: 40px;
         }
 
         .contact{
